5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1828_1657.log
== TEST (2019-06-12 15:20:02) 
-- CODE:
from numpy import *
vet = input("Estado de origem: ").split(',')
vcont = 0
for i in range(size(vet)):
	if (vet[i] > AZ)

-- ERROR:
File "XXXX", line 5
    if (vet[i] > AZ)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:20:20) 
-- CODE:
from numpy import *
vet = input("Estado de origem: ").split(',')
vcont = 0
for i in range(size(vet)):
	if (vet[i] > 1):

-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:20:55) 
-- CODE:
from numpy import *
vet = input("Estado de origem: ").split(',')
vcont = 0
for i in range(size(vet)):
	if (vet[i] > 1):
		vcont[0] = vcont[0] + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:21:42) 
-- CODE:
from numpy import *
vet = input("Estado de origem: ").split(',')
vcont = 0
for i in range(size(vet)):
	if (vet[i] > ):
		vcont[0] = vcont[0] + 1
-- EXECUTION TIME:
0.823809
-- ERROR:
  File "/home/codebench/codes/1828/1657/main.py", line 5
    if (vet[i] > ):
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:31:32) 
-- CODE:
from numpy import *
vet = input("Estado de origem: ").split(',')
vcont = 0
for i in range(size(vet)):
	if(vet[i] == AZ):
		vcont = vcont + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:32:16) 
-- CODE:
from numpy import *
vet = input("Estado de origem: ").split(',')
vcont = 0
for i in range(size(vet)):
	if(vet[i] == AZ):
		vcont = vcont + 1
-- EXECUTION TIME:
1.11035
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1828/1657/main.py", line 5, in <module>
    if(vet[i] == AZ):
NameError: name 'AZ' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:32:27) 
-- CODE:
from numpy import *
vet = input("Estado de origem: ").split(',')
vcont = 0
for i in range(size(vet)):
	if(vet[i] == 1):
		vcont = vcont + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:33:08) 
-- CODE:
from numpy import *
vet = input("Estado de origem: ").split(',')
vcont = 0
for i in range(size(vet)):
	if(vet[i] == 1):
		vcont = vcont + 1
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:33:53) 
-- CODE:
from numpy import *
vet = input("Estado de origem: ").split(',')
vcont = 0
for i in range(size(vet)):
	if(vet[i] == 2):
		vcont = vcont + 1
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:34:29) 
-- CODE:
from numpy import *
vet = input("Estado de origem: ").split(',')
vcont = 0
for i in range(size(vet)):
	if(vet[i] == 2):
		vcont[0] = vcont[0] + 1
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:35:31) 
-- CODE:
from numpy import *
vet = input("Estado de origem: ").split(',')
vcont = 0
for i in range(size(vet)):
	if(vet[i] == CA):
		vcont[0] = vcont[0] + 1
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:36:15) 
-- CODE:
from numpy import *
vet = input("Estado de origem: ").split(',')
vcont = 0
for i in range(size(vet)):
	if(vet[i] == CA):
		vcont[0] = vcont[0] + 1
print(vcont)
-- EXECUTION TIME:
1.10918
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1828/1657/main.py", line 5, in <module>
    if(vet[i] == CA):
NameError: name 'CA' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:37:18) 
-- CODE:
from numpy import *
vet = input("Estado de origem: ").split(',')
vcont = 0
for i in range(size(vet)):
	if(vet[i] == 1):
		vcont[0] = vcont[0] + 1
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:37:39) 
-- CODE:
from numpy import *
vet = input("Estado de origem: ").split(',')
vcont = 0
for i in range(size(vet)):
	if(vet[i] == 1):
		vcont[0] = vcont[0] + 1
print(vcont)
-- EXECUTION TIME:
1.11391
-- TEST CASE 1:
---- input:
FL,AZ,CA,CA,CA,CA,CA
---- correct output:
5
[1 5 1 0 0]
---- user output:
0
-- TEST CASE 2:
---- input:
FL,CA,WI,FL,WI,AZ,PA,WI,FL,PA
---- correct output:
3
[1 1 3 2 3]
---- user output:
0
-- TEST CASE 3:
---- input:
AZ,CA,AZ,WI,CA,AZ,PA,PA,FL,FL,CA,PA,AZ,FL,FL,PA,PA,PA,CA,FL,AZ,CA,PA
---- correct output:
7
[5 5 5 7 1]
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:47:16) 
-- CODE:
from numpy import *
vet = input("Estado de origem: ").split(',')
vcont = 0
for i in vet:
	if (vet[i] >= 1):
		
	
-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:47:22) 
-- CODE:
from numpy import *
vet = input("Estado de origem: ").split(',')
vcont = 0
for i in vet:
	if (vet[i] >= 1):
		
	
-- EXECUTION TIME:
0.813895
-- ERROR:
  File "/home/codebench/codes/1828/1657/main.py", line 8
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:48:26) 
-- CODE:
from numpy import *
vet = input("Estado de origem: ").split(',')
vcont = 0
for i in vet:
	if (vet[i] >= 1):
		vcont[0] = vcont[0] + 1
	print(CA)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:49:02) 
-- CODE:
from numpy import *
vet = input("Estado de origem: ").split(',')
vcont = 0
for i in vet:
	if (vet[i] >= CA):
		vcont[0] = vcont[0] + 1
	print(CA)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:49:28) 
-- CODE:
from numpy import *
vet = input("Estado de origem: ").split(',')
vcont = 0
for i in vet:
	if (vet >= CA):
		vcont[0] = vcont[0] + 1
	print(CA)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:49:40) 
-- CODE:
from numpy import *
vet = input("Estado de origem: ").split(',')
vcont = 0
for i in vet:
	if (vet >= 1):
		vcont[0] = vcont[0] + 1
	print(VCONT)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:49:57) 
-- CODE:
from numpy import *
vet = input("Estado de origem: ").split(',')
vcont = 0
fo
-- EXECUTION TIME:
0.909487
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1828/1657/main.py", line 4, in <module>
    fo
NameError: name 'fo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
